--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<script src="js/questions.js"></script>
 
 		<meta charset="UTF-8">
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 
 	<body>
