--- a/index.html
+++ b/index.html
@@ -1,90 +1,96 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
 
-		<title>Quiz</title>
+<head>
+    <meta charset="UTF-8">
 
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Quiz</title>
 
-		<script src="js/core.js"></script>
-		<script src="js/questions.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	</head>
+    <script src="js/core.js"></script>
+    <script src="js/questions.js"></script>
 
-	<body>
-		<header>
-			<div id="container">
-				Makroökonómia Quiz
-				<progress id="progressBar" value="0" max="0"></progress>
-			</div>
-		</header>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
-		<main>
-			<p id="questionPlaceholder"></p>
-			<form><p id="answers"></p></form>
+<body>
+    <header>
+        <div id="container">
+            Makroökonómia Quiz
+            <progress id="progressBar" value="0" max="0"></progress>
+        </div>
+    </header>
 
-			<button id="nextButton" onClick="nextQuestionEvent()">Új kérdés</button>
-			<button id="checkButton" onClick="checkQuestionEvent()" style="display: none;">Válaszok ellenőrzése</button>
-		</main>
+    <main>
+        <p id="questionPlaceholder"></p>
+        <form>
+            <p id="answers"></p>
+        </form>
 
-		<footer>
-			Copyright &copy 2017 PoLáKoSz
-		</footer>
+        <button id="nextButton" onClick="nextQuestionEvent()">Új kérdés</button>
+        <button id="checkButton" onClick="checkQuestionEvent()" style="display: none;">Válaszok ellenőrzése</button>
+    </main>
 
-		<script type="text/javascript">
-			var quiz = new Quiz(jsonQuestions['questions']);
-			var randomQuestion;
+    <footer>
+        Copyright &copy 2018 PoLáKoSz
+    </footer>
 
-			document.getElementById("progressBar").max = quiz.MaxCount;
+    <script type="text/javascript">
+        var quiz = new Quiz(jsonQuestions['questions']);
+        var randomQuestion;
 
-			function nextQuestionEvent() {
-				randomQuestion = quiz.getRandomQuestion();
+        document.getElementById("progressBar").max = quiz.MaxCount;
 
-				document.getElementById("progressBar").value = quiz.MaxCount - quiz.QuestionsCount;
+        function nextQuestionEvent() {
+            randomQuestion = quiz.getRandomQuestion();
 
-				questionPlaceholder.innerHTML = randomQuestion.Question;
-				            answers.innerHTML = "";
+            document.getElementById("progressBar").value = quiz.MaxCount - quiz.QuestionsCount;
 
-				for (var i = 0; i < randomQuestion.AllAnswers.length; i++) {
-					var answer = randomQuestion.getRandomAnswer();
+            questionPlaceholder.innerHTML = randomQuestion.Question;
+            answers.innerHTML = "";
 
-					answers.innerHTML += '<label><input type="checkbox" value="' + answer.ID + '">' + answer.Answer + "</label><br>";
-				}
+            for (var i = 0; i < randomQuestion.AllAnswers.length; i++) {
+                var answer = randomQuestion.getRandomAnswer();
 
-				if (quiz.QuestionsCount == 0) {
-					document.getElementById("nextButton").disabled = true;
-				}
+                answers.innerHTML += '<label><input type="checkbox" value="' + answer.ID + '">' + answer.Answer + "</label><br>";
+            }
 
-				document.getElementById("checkButton").style.display = 'inline';
-			}
+            if (quiz.QuestionsCount == 0) {
+                document.getElementById("nextButton").disabled = true;
+            }
 
-			function checkQuestionEvent() {
-				var ancestor = document.getElementById('answers');
-				var descendents = ancestor.getElementsByTagName('input');
+            document.getElementById("checkButton").style.display = 'inline';
+        }
 
-				for (var i = 0; i < descendents.length; i++) {
-					var htmlElem = descendents[i];
-					htmlElem.disabled = true;
+        function checkQuestionEvent() {
+            var ancestor = document.getElementById('answers');
+            var descendents = ancestor.getElementsByTagName('input');
 
-					var answerID = parseInt(htmlElem.value);
-					var isCheckedInUI = htmlElem.checked;
+            for (var i = 0; i < descendents.length; i++) {
+                var htmlElem = descendents[i];
+                htmlElem.disabled = true;
 
-					// if not checked in UI and not in the correct answers => true
-					// if     checked in UI and     in the correct answers => true
-					var isCorrectAnswer = ( (isCheckedInUI == false) && (randomQuestion.Correct.includes(answerID) == false) ) ||
-										  ( (isCheckedInUI && randomQuestion.Correct.includes(answerID) ));
+                var answerID = parseInt(htmlElem.value);
+                var isCheckedInUI = htmlElem.checked;
 
-					if (isCorrectAnswer) {
-						htmlElem.parentNode.style.backgroundColor = "green";
-					} else {
-						htmlElem.parentNode.style.backgroundColor = "red";
-					}
-				}
+                /*
+                	if not checked in UI and not in the correct answers => true
+                	if     checked in UI and     in the correct answers => true
+                */
+                var isCorrectAnswer = ((isCheckedInUI == false) && (randomQuestion.Correct.includes(answerID) == false)) ||
+                    ((isCheckedInUI && randomQuestion.Correct.includes(answerID)));
 
-				document.getElementById("checkButton").style.display = 'none';
-			}
-		</script>
-	</body>
+                if (isCorrectAnswer) {
+                    htmlElem.parentNode.style.backgroundColor = "green";
+                } else {
+                    htmlElem.parentNode.style.backgroundColor = "red";
+                }
+            }
+
+            document.getElementById("checkButton").style.display = 'none';
+        }
+    </script>
+</body>
+
 </html>
