Replace footer with contact info

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </main>
 
     <footer>
-        Copyright &copy 2018 PoLáKoSz
+        Hibabejelentést a <a href="mailto:polakosz@freemail.hu">polakosz@freemail.hu</a>-ra küld, vagy nyiss egy Issue-t <a href="https://github.com/PoLaKoSz/WebQuiz/issues/new" target="_blank">GitHub</a>-on kérlek!
     </footer>
 
     <script type="text/javascript">
