--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     <script src="js/core.js"></script>
     <script src="js/makrookonomia.js"></script>
     <script src="js/sztf1.js"></script>
+
+    <script>
+        quizzes.displayQuizSelector();
+    </script>
 </body>
 
 </html>
