--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         var quizzes = new QuizManager(document.getElementById('quizContainer'));
     </script>
     
-    <script src="js/module_tests.js"></script>
+    <script src="js/makrookonomia.js"></script>
+    <script src="js/sztf1.js"></script>
 
     <script>
         quizzes.displayQuizSelector();
